[package]
edition = "2021"
name = "resharper"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.24.7"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
